tests/fixtures/errors/syntax_is_bare.z
# E0035: a function `is`-body must be a brace block, not a bare expression.
foo: function out i64 is return 42
